[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monty-hall-simulator"
version = "3.0.0"
description = "A Monty Hall problem simulator with beautiful TUI"
authors = [
    {name = "Mike", email = "michaelw.home@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "textual>=0.41.0",
]

[tool.hatch.build.targets.wheel]
    packages = ["montyhall.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]